
#ADD_LIBRARY(helloa SHARED ${SRC})

#FIND_PACKAGE(PCL REQUIRED COMPONENTS common io)
#if(PCL_FOUND)
#	ADD_DEFINITIONS(${PCL_DEFINITIONS})
#	INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
#	LINK_LIBRARIES(${PCL_LIBRARY_DIRS})
#else(PCL_FOUND)
#   message(FATAL_ERROR "PCL not found!")
#endif(PCL_FOUND)

FIND_PACKAGE(OpenCV REQUIRED)
if(OpenCV_FOUND)
	INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIRS})
	LINK_LIBRARIES(${OPENCV_LIBRARY_DIRS})
else(OpenCV_FOUND)
	message(FATAL_ERROR "opencv not found!")
endif(OpenCV_FOUND)


FIND_PACKAGE(Boost COMPONENTS system filesystem REQUIRED)
if(Boost_FOUND)
	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
	LINK_LIBRARIES(${Boost_LIBRARY_DIRS})
else(Boost_FOUND)
	message(FATAL_ERROR "boost not found!")
endif(Boost_FOUND)

ADD_EXECUTABLE(test_opencv test_opencv.cpp)
TARGET_LINK_LIBRARIES(test_opencv ${OpenCV_LIBS} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})

ADD_EXECUTABLE(warpAffine warpAffine.cpp)
TARGET_LINK_LIBRARIES(warpAffine ${OpenCV_LIBS} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})


	
